--- a/index.html
+++ b/index.html
@@ -13,7 +13,31 @@
   </head>
 
   <body>
-    <h1>Hello</h1>
+    <main>
+      <div class="content">
+        <div class="intro-text">
+          <h1>Case generator</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
+            aliquam mollis ante, vel vestibulum leo ornare vitae. Suspendisse
+            vel erat sed metus commodo porta. Pellentesque condimentum semper
+            facilisis.
+          </p>
+        </div>
+        <div class="generator">
+          <div class="input">
+            <h5>What's your text?</h5>
+            <textarea></textarea>
+          </div>
+          <div class="buttons">
+            <h5>What do you want to do with it?</h5>
+            <button>Sentence case</button>
+            <button>ALLCAPS</button>
+            <button>Capitalize</button>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="js/app.js"></script>
   </body>
 </html>
