--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <div class="generator">
           <div class="input">
             <h5>What's your text?</h5>
-            <textarea></textarea>
+            <textarea> </textarea>
+            <button class="copy">Copy</button>
           </div>
           <div class="buttons">
             <h5>What do you want to do with it?</h5>
-            <button>Sentence case</button>
-            <button>ALLCAPS</button>
-            <button>Capitalize</button>
+            <button data-index="0" class="tab">Sentence case</button>
+            <button data-index="1" class="tab">ALLCAPS</button>
+            <button data-index="2" class="tab">Capitalize Text</button>
           </div>
         </div>
       </div>
