--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <div class="generator">
           <div class="input">
             <h5>What's your text?</h5>
-            <textarea> </textarea>
-            <button class="copy">Copy</button>
+            <textarea></textarea>
+            <p class="empty">It looks the text are is empty :/</p>
+            <button id="copy-button" class="copy">Copy</button>
           </div>
           <div class="buttons">
             <h5>What do you want to do with it?</h5>
