--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main>
       <div class="content">
-        <div class="intro-text">
+        <!-- <div class="intro-text">
           <h1>Case generator</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
@@ -23,7 +23,7 @@
             vel erat sed metus commodo porta. Pellentesque condimentum semper
             facilisis.
           </p>
-        </div>
+        </div> -->
         <div class="generator">
           <div class="input">
             <h5>What's your text?</h5>
